add remaining files

--- a/index.html
+++ b/index.html
@@ -7,426 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-    <style>
-        /* General Styles */
-        .section-padding {
-            padding: 80px 0;
-        }
+    <link href="styles.css" rel="stylesheet"> <!-- 外部CSSファイルを読み込む -->
 
-        /* Feature Section */
-        .feature-card {
-            border: none;
-            border-radius: 15px;
-            transition: all 0.3s ease;
-            overflow: hidden;
-        }
-
-        .feature-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(0,0,0,0.1);
-        }
-
-        .feature-icon {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            transition: all 0.3s ease;
-        }
-
-        .feature-card:hover .feature-icon {
-            transform: scale(1.1);
-        }
-
-        .feature-card .card-body {
-            padding: 2rem;
-        }
-
-        .feature-title {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
-        }
-
-        .feature-description {
-            color: #6c757d;
-        }
-
-        /* Showcase Section */
-        .showcase-img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .showcase-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-        }
-
-        .img-80 {
-            max-width: 80%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
-
-        /* CTA Section */
-        .cta {
-            background-color: #f8f9fa;
-        }
-
-        .btn-cta {
-            padding: 15px 30px;
-            font-size: 1.25rem;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            border-radius: 20px;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .btn-cta:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        .btn-cta:active {
-            transform: translateY(-1px);
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .btn-cta-wrapper {
-            position: relative;
-            display: inline-block;
-        }
-
-        .btn-cta-wrapper::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 50px;
-            transform: scale(0);
-            transition: transform 0.3s ease;
-        }
-
-        .btn-cta-wrapper:hover::before {
-            transform: scale(1.1);
-        }
-
-        /* Price Section */
-        .price-card {
-            transition: transform 0.3s;
-        }
-
-        .price-card:hover {
-            transform: translateY(-10px);
-        }
-
-        /* Team Section */
-        .team-member {
-            margin-bottom: 2rem;
-        }
-
-        .team-member img {
-            width: 200px;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 50%;
-            margin-bottom: 1rem;
-            transition: all 0.3s ease;
-        }
-
-        .team-member:hover img {
-            transform: scale(1.05);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-        }
-
-        .team-member h4 {
-            font-size: 1.25rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .team-member p {
-            font-size: 1rem;
-            color: #6c757d;
-        }
-
-        /* Animations */
-        @keyframes pulse {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.05);
-            }
-            100% {
-                transform: scale(1);
-            }
-        }
-
-        /* ヒーローセクションのスタイル */
-        .hero {
-            position: relative;
-            height: 100vh;
-            overflow: hidden;
-            background-color: #f0f0f0; /* 薄いグレーの背景色 */
-            background-size: cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-        }
-
-        .hero-background {
-            background-color: #f0f0f0; /* 白から薄いグレーに変更 */
-            border-radius: 10px; 
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); 
-            z-index: 0;  /* コンテンツの後ろに配置 */
-            opacity: 0.3;  /* 背景の透明度を調整 */
-            transition: opacity 1s ease;  /* フェードインのアニメーション */
-        }
-
-        .hero-content-wrapper {
-            position: relative;
-            z-index: 5;
-            width: 100%;
-            opacity: 0;
-            transform: translateY(20px);  /* 初期位置を少し下げる */
-            transition: opacity 1s ease, transform 1s ease;  /* フェードインと上昇のアニメーション */
-        }
-
-    .hero-image {
-        max-width: 60%;
-        height: auto;
-        margin: 0 auto;
-        display: block;
-    }
-
-    .hero-content {
-        background-color: white;
-        border-radius: 10px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        transition: all 0.3s ease;
-        padding: 2rem;
-        max-width: 400px; /* テキストコンテナの幅を狭く設定 */
-
-    }
-
-    .hero-content:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-    }
-
-    .hero-main-title {
-        font-size: 2.8rem;  /* フォントサイズを大きく */
-        font-weight: bold;
-        margin-bottom: 1rem;
-        color: #333;
-    }
-
-    .hero-subtitle {
-        font-size: 1.4rem;  /* フォントサイズを大きく */
-        margin-bottom: 2rem;
-        color: #666;
-    }
-
-    .hero-cta-button, .hero-cta-button-mobile {
-        padding: 10px 30px;
-        font-size: 1.1rem;
-    }
-
-    .fade-in {
-    opacity: 1;
-    transform: translateY(0);  /* 元の位置に戻す */
-    transition: opacity 1s ease, transform 1s ease;
-}
-
-
-    @media (max-width: 767px) {
-        .hero-content-wrapper .row {
-            flex-direction: column;
-        }
-
-        .hero-image {
-            max-width: 100%;
-            /* margin-top: 1rem; */
-            margin-bottom: 0;
-        }
-
-        .hero-content {
-            text-align: center;
-            /* margin-bottom: 1rem; */
-            /* padding: 1.5rem; */
-            box-shadow: none;
-
-        }
-
-        .hero-main-title {
-            font-size: 1.8rem;
-            margin-top: 0;
-        }
-
-        .hero-subtitle {
-            font-size: 1rem;
-            margin-bottom: 0;  /* 余分な余白を削除 */
-        }
-
-        .hero-cta-button {
-            /* margin-top: 1rem; */
-            display: block;
-            width: 100%;
-        }
-    }
-
-
-        /* animation */
-        .hero-animation {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #fff; /* 背景色を白に変更 */
-            z-index: 3;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .hero-title-container {
-            opacity: 0;
-            /* transition: all 0.5s ease; */
-            background-color: #007bff;
-            padding: 10px 20px;
-            border-radius: 10px;
-        }
-
-        .hero-title {
-            font-size: 4rem;
-            font-weight: bold;
-            color: #fff;
-            margin: 0;
-        }
-
-        .hero-title span {
-            display: inline-block;
-            transition: all 0.5s ease;
-        }
-
-        .power-button-container {
-            position: absolute;
-            width: 100px;
-            height: 100px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all 0.5s ease;
-            z-index: 4; /* 電源ボタンを最前面に */
-        }
-
-        .power-button {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            background-color: #007bff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            opacity: 0;
-            transition: all 0.5s ease;
-        }
-
-        .power-icon {
-            font-size: 3rem;
-            color: #fff;
-        }
-
-        .loading-bar-container {
-            position: absolute;
-            height: 20px; /* ローディングバーを太く */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all 0.5s ease;
-            opacity: 0;
-        }
-
-        .loading-bar {
-            height: 100%;
-            background-color: #007bff;
-            transition: all 0.5s ease;
-            width: 0;
-            border-radius: 7.5px; /* 高さの半分に設定 */
-        }
-
-
-        /* モバイル表示時のタイトルサイズ調整 */
-        @media (max-width: 768px) {
-            .hero-title {
-                font-size: 2.5rem;
-            }
-        }
-
-        @keyframes popOut {
-            0% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.2); opacity: 0.5; }
-            100% { transform: scale(0); opacity: 0; }
-        }
-
-        .pop-out {
-            animation: popOut 0.7s ease-in-out forwards; /* アニメーション時間を少し長くし、イージング関数を追加 */
-        }
-
-        /* 新しいアニメーション */
-        @keyframes slideIn {
-            0% { transform: translateY(-50px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
-        }
-
-        .slide-in {
-            animation: slideIn 0.5s ease-out forwards;
-        }
-
-        /* レスポンシブデザイン */
-        @media (max-width: 768px) {
-            .loading-bar-container {
-                width: 80%;
-            }
-            .power-button-container {
-                width: 80px;
-                height: 80px;
-            }
-
-            .power-button {
-                width: 80px;
-                height: 80px;
-            }
-
-            .power-icon {
-                font-size: 2.5rem;
-            }
-        }
-
-        @media (min-width: 769px) {
-            .loading-bar-container {
-                width: 60%;
-            }
-        }
-
-        /* Media Queries */
-        @media (max-width: 767.98px) {
-            .team-member img {
-                width: 150px;
-                height: 150px;
-            }
-        }
-    </style>
 </head>
 <body>
     <!-- ヒーローセクション -->
