--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet"> <!-- 外部CSSファイルを読み込む -->
-
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <!-- ヒーローセクション -->
     <section class="hero">
-
         <div class="hero-animation">
             <div class="hero-title-container">
                 <h1 class="hero-title">
@@ -32,31 +30,28 @@
             </div>
         </div>
         <div class="hero-background"></div>
-
-    <!-- ここにhero-content-wrapperを追加 -->
-    <div class="hero-content-wrapper">
-        <div class="container bg-white rounded-3 py-5">
-            <div class="row align-items-center">
-                <div class="col-md-6 order-md-1 order-2">
-                    <img src="C:\LP\10.png" alt="FIND TO DO アプリイメージ" class="img-fluid hero-image">
+        <div class="hero-content-wrapper">
+            <div class="container bg-white rounded-3 py-5">
+                <div class="row align-items-center">
+                    <div class="col-md-6 order-md-1 order-2">
+                        <img src="C:\LP\10.png" alt="FIND TO DO アプリイメージ" class="img-fluid hero-image">
+                    </div>
+                    <div class="col-md-6 order-md-2 order-1">
+                        <div class="hero-content bg-white rounded shadow p-4">
+                            <h1 class="hero-main-title">FIND TO DO</h1>
+                            <p class="hero-subtitle">やりたいことを見つけるアプリ</p>
+                            <a href="#" class="btn btn-primary btn-lg hero-cta-button d-none d-md-inline-block">今すぐ始める</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-6 order-md-2 order-1">
-                    <div class="hero-content bg-white rounded shadow p-4">
-                        <h1 class="hero-main-title">FIND TO DO</h1>
-                        <p class="hero-subtitle">やりたいことを見つけるアプリ</p>
-                        <a href="#" class="btn btn-primary btn-lg hero-cta-button d-none d-md-inline-block">今すぐ始める</a>
+                <div class="row d-md-none">
+                    <div class="col-12">
+                        <a href="#" class="btn btn-primary btn-lg hero-cta-button-mobile w-100 mt-3">今すぐ始める</a>
                     </div>
                 </div>
             </div>
-            <div class="row d-md-none">
-                <div class="col-12">
-                    <a href="#" class="btn btn-primary btn-lg hero-cta-button-mobile w-100 mt-3">今すぐ始める</a>
-                </div>
-            </div>
         </div>
-    </div> <!-- hero-content-wrapperの終了タグ -->
     </section>
-
 
     <!-- FEATURESセクション -->
     <section id="features" class="section-padding bg-light">
@@ -247,22 +242,20 @@
 
             // タイトルのフェードイン
             setTimeout(() => {
-                // heroTitleContainer.style.opacity = '1';
                 heroTitleContainer.classList.add('slide-in');
             }, 500);
 
             // タイトルをポップアウトさせて消す
             setTimeout(() => {
-                heroTitleContainer.classList.remove('slide-in'); // スライドインクラスを削除
-
+                heroTitleContainer.classList.remove('slide-in');
                 heroTitleContainer.classList.add('pop-out');
             }, 1500);
 
             // タイトルが完全に消えた後に電源ボタンを表示
             setTimeout(() => {
-                heroTitleContainer.style.display = 'none'; // タイトルを完全に非表示にする
+                heroTitleContainer.style.display = 'none';
                 powerButton.style.opacity = '1';
-            }, 2200); // ポップアウトアニメーションの終了後に設定
+            }, 2200);
 
             // ローディングバーのアニメーションと電源ボタンの移動
             setTimeout(() => {
@@ -288,19 +281,15 @@
             }, 4000);
 
             if (heroContentWrapper) {
-        console.log("Before:", heroContentWrapper.classList); 
-
-        setTimeout(() => {
-            heroContentWrapper.classList.add('fade-in');  // フェードインアニメーションを適用
-            console.log("After:", heroContentWrapper.classList); 
-        }, 4500);
-    } else {
-        console.error("hero-content-wrapper が見つかりません。");
-    }
+                console.log("Before:", heroContentWrapper.classList);
+                setTimeout(() => {
+                    heroContentWrapper.classList.add('fade-in');
+                    console.log("After:", heroContentWrapper.classList);
+                }, 4500);
+            } else {
+                console.error("hero-content-wrapper が見つかりません。");
+            }
         });
-
-        
-
     </script>
 </body>
 </html>
