add remaining files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container bg-white rounded-3 py-5">
                 <div class="row align-items-center">
                     <div class="col-md-6 order-md-1 order-2">
-                        <img src="C:\LP\10.png" alt="FIND TO DO アプリイメージ" class="img-fluid hero-image">
+                        <img src="10.png" alt="FIND TO DO アプリイメージ" class="img-fluid hero-image">
                     </div>
                     <div class="col-md-6 order-md-2 order-1">
                         <div class="hero-content bg-white rounded shadow p-4">
