--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <!-- FEATURESセクション -->
-    <section id="features" class="section-padding bg-light">
+    <section id="features" class="section-padding bg-light section-spacing">
         <div class="container">
             <h2 class="text-center mb-5" data-aos="fade-up">FIND TO DO の特徴</h2>
             <div class="row">
@@ -90,7 +90,7 @@
     </section>
 
     <!-- SHOWCASESセクション -->
-    <section id="showcases" class="section-padding bg-light">
+    <section id="showcases" class="section-padding bg-light section-spacing">
         <div class="container">
             <h2 class="text-center mb-5" data-aos="fade-up">アプリの特徴</h2>
             <div class="row align-items-center mb-5">
@@ -135,7 +135,7 @@
     </section>
 
     <!-- CTAセクション -->
-    <section id="cta" class="section-padding bg-primary text-white">
+    <section id="cta" class="section-padding bg-primary text-white section-spacing">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
@@ -153,7 +153,7 @@
     </section>
 
     <!-- 企業向けオプションセクション -->
-    <section id="business-opportunities" class="section-padding">
+    <section id="business-opportunities" class="section-padding section-spacing">
         <div class="container">
             <h2 class="text-center mb-5" data-aos="fade-up">企業の皆様へ</h2>
             <div class="row">
@@ -192,7 +192,7 @@
     </section>
     
     <!-- TEAMセクション -->
-    <section id="team" class="section-padding">
+    <section id="team" class="section-padding section-spacing">
         <div class="container">
             <h2 class="text-center mb-5" data-aos="fade-up">チームメンバー</h2>
             <div class="row justify-content-center">
