add remaining files

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="hero-background"></div>
         <div class="hero-content-wrapper">
-            <div class="container bg-white rounded-3 py-5">
+            <div class="container rounded-3 py-5">
                 <div class="row align-items-center">
                     <div class="col-md-6 order-md-1 order-2">
                         <img src="10.png" alt="FIND TO DO アプリイメージ" class="img-fluid hero-image">
@@ -40,7 +40,7 @@
                         <div class="hero-content bg-white rounded shadow p-4">
                             <h1 class="hero-main-title">FIND TO DO</h1>
                             <p class="hero-subtitle">やりたいことを見つけるアプリ</p>
-                            <a href="#" class="btn btn-primary btn-lg hero-cta-button d-none d-md-inline-block">今すぐ始める</a>
+                            <a href="contact.html" class="btn btn-primary btn-lg hero-cta-button d-none d-md-inline-block">今すぐ始める</a>
                         </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                     <h2 class="mb-4" data-aos="fade-up">未来への第一歩を踏み出そう</h2>
                     <p class="lead mb-5" data-aos="fade-up" data-aos-delay="200">FIND TO DO で、あなたの可能性を広げませんか？</p>
                     <div class="btn-cta-wrapper" data-aos="fade-up" data-aos-delay="400">
-                        <a href="#" class="btn btn-light btn-cta animate-pulse">
+                        <a href="contact.html" class="btn btn-light btn-cta animate-pulse">
                             今すぐ始める
                             <i class="fas fa-arrow-right ml-2"></i>
                         </a>
