add remaining files

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="row d-md-none">
                     <div class="col-12">
-                        <a href="#" class="btn btn-primary btn-lg hero-cta-button-mobile w-100 mt-3">今すぐ始める</a>
+                        <a href="contact.html" class="btn btn-primary btn-lg hero-cta-button-mobile w-100 mt-3">今すぐ始める</a>
                     </div>
                 </div>
             </div>
