--- a/index.html
+++ b/index.html
@@ -31,24 +31,18 @@
         </div>
         <div class="hero-background"></div>
         <div class="hero-content-wrapper">
-            <div class="container rounded-3 py-5">
-                <div class="row align-items-center">
-                    <div class="col-md-6 order-md-1 order-2">
-                        <img src="10.png" alt="FIND TO DO アプリイメージ" class="img-fluid hero-image">
-                    </div>
-                    <div class="col-md-6 order-md-2 order-1">
-                        <div class="hero-content bg-white rounded shadow p-4">
-                            <h1 class="hero-main-title">FIND TO DO</h1>
-                            <p class="hero-subtitle">やりたいことを見つけるアプリ</p>
-                            <a href="contact.html" class="btn btn-primary btn-lg hero-cta-button d-none d-md-inline-block">今すぐ始める</a>
-                        </div>
+            <div class="hero-container">
+                <div class="hero-image-container">
+                    <img src="10.png" alt="FIND TO DO アプリイメージ" class="hero-image">
+                </div>
+                <div class="hero-text-container">
+                    <div class="hero-content">
+                        <h1 class="hero-main-title">FIND TO DO</h1>
+                        <p class="hero-subtitle">やりたいことを見つけるアプリ</p>
+                        <a href="contact.html" class="hero-cta-button">今すぐ始める</a>
                     </div>
                 </div>
-                <div class="row d-md-none">
-                    <div class="col-12">
-                        <a href="contact.html" class="btn btn-primary btn-lg hero-cta-button-mobile w-100 mt-3">今すぐ始める</a>
-                    </div>
-                </div>
+                <a href="contact.html" class="hero-cta-button-mobile">今すぐ始める</a>
             </div>
         </div>
     </section>
