--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img src="10.png" alt="FIND TO DO アプリイメージ" class="hero-image">
                 </div>
                 <div class="hero-text-container">
-                    <div class="hero-content">
+                    <div class="hero-content h-auto h-md-100">
                         <h1 class="hero-main-title">FIND TO DO</h1>
                         <p class="hero-subtitle">やりたいことを見つけるアプリ</p>
                         <a href="contact.html" class="hero-cta-button">今すぐ始める</a>
