--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 <div class="hero-image-container">
                     <img src="10.png" alt="FIND TO DO アプリイメージ" class="hero-image">
                 </div>
-                <div class="hero-text-container">
+                <div class="hero-text-container" data-aos="fade-left" data-aos-delay="300" data-aos-duration="1000">
                     <div class="hero-content h-auto h-md-100">
                         <h1 class="hero-main-title">FIND TO DO</h1>
                         <p class="hero-subtitle">やりたいことを見つけるアプリ</p>
                         <a href="contact.html" class="hero-cta-button">今すぐ始める</a>
                     </div>
                 </div>
-                <a href="contact.html" class="hero-cta-button-mobile">今すぐ始める</a>
+                <!-- <a href="contact.html" class="hero-cta-button-mobile">今すぐ始める</a> -->
             </div>
         </div>
     </section>
