--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-content-wrapper">
             <div class="hero-container">
                 <div class="hero-image-container">
-                    <img src="10.png" alt="FIND TO DO アプリイメージ" class="hero-image">
+                    <img src="10.webp" alt="FIND TO DO アプリイメージ" class="hero-image">
                 </div>
                 <div class="hero-text-container" data-aos="fade-left" data-aos-delay="300" data-aos-duration="1000">
                     <div class="hero-content h-auto h-md-100">
@@ -90,7 +90,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-md-6" data-aos="fade-right">
                     <div class="showcase-container">
-                        <img src="1.png" alt="イベント検索" class="showcase-img rounded shadow img-80">
+                        <img src="1.webp" alt="イベント検索" class="showcase-img rounded shadow img-80">
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
@@ -101,7 +101,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-md-6 order-md-2" data-aos="fade-left">
                     <div class="showcase-container">
-                        <img src="2.png" alt="コミュニケーション" class="showcase-img rounded shadow img-80">
+                        <img src="2.webp" alt="コミュニケーション" class="showcase-img rounded shadow img-80">
                     </div>
                 </div>
                 <div class="col-md-6 order-md-1" data-aos="fade-right">
@@ -113,10 +113,10 @@
                 <div class="col-md-6" data-aos="fade-right">
                     <div class="row">
                         <div class="col-6 mb-3">
-                            <img src="3.png" alt="自己分析 1" class="showcase-img rounded shadow w-100">
+                            <img src="3.webp" alt="自己分析 1" class="showcase-img rounded shadow w-100">
                         </div>
                         <div class="col-6 mb-3">
-                            <img src="4.png" alt="自己分析 2" class="showcase-img rounded shadow w-100">
+                            <img src="4.webp" alt="自己分析 2" class="showcase-img rounded shadow w-100">
                         </div>
                     </div>
                 </div>
@@ -192,14 +192,14 @@
             <div class="row justify-content-center">
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="team-member text-center">
-                        <img src="02.png" alt="飯田思遠" class="img-fluid">
+                        <img src="02.webp" alt="飯田思遠" class="img-fluid">
                         <h4>飯田思遠</h4>
                         <p class="text-muted">Founder</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="team-member text-center">
-                        <img src="01.png" alt="漆畑智哉" class="img-fluid">
+                        <img src="01.webp" alt="漆畑智哉" class="img-fluid">
                         <h4>漆畑智哉</h4>
                         <p class="text-muted">Engineer</p>
                     </div>
